@@ -6,6 +6,7 @@ import com.wissen.hotel.models.User;
 import com.wissen.hotel.repositories.BookingRepository;
 import com.wissen.hotel.repositories.UserRepository;
 import com.wissen.hotel.utils.AuthUtil;
+import com.wissen.hotel.exceptions.UserServiceException;
 
 import jakarta.transaction.Transactional;
 
@@ -23,10 +24,14 @@ public class UserServiceImpl implements UserService {
 
     private static final Logger logger = LoggerFactory.getLogger(UserServiceImpl.class);
 
+    private final UserRepository userRepository;
+    private final BookingRepository bookingRepository;
+
     @Autowired
-    private UserRepository userRepository;
-    @Autowired
-    private BookingRepository bookingRepository;
+    public UserServiceImpl(UserRepository userRepository, BookingRepository bookingRepository) {
+        this.userRepository = userRepository;
+        this.bookingRepository = bookingRepository;
+    }
 
     @Override
     public UserResponse getCurrentUser() {
@@ -34,10 +39,10 @@ public class UserServiceImpl implements UserService {
             logger.info("Fetching current user");
             User user = AuthUtil.getCurrentUser();
             logger.info("Current user fetched successfully: {}", user.getEmail());
-            return UserResponse.from(user);
+            return UserResponse.from(user); // includes emailVerified
         } catch (Exception e) {
             logger.error("Error fetching current user: {}", e.getMessage());
-            throw new RuntimeException("Unable to fetch current user. Please login again.");
+            throw new UserServiceException("Unable to fetch current user. Please login again.", e);
         }
     }
 
@@ -52,10 +57,10 @@ public class UserServiceImpl implements UserService {
             user.setDob(request.getDob());
 
             logger.info("User updated successfully: {}", user.getEmail());
-            return UserResponse.from(userRepository.save(user));
+            return UserResponse.from(userRepository.save(user)); // includes emailVerified
         } catch (Exception e) {
             logger.error("Error updating current user: {}", e.getMessage());
-            throw new RuntimeException("Unable to update user profile. Please try again later.");
+            throw new UserServiceException("Unable to update user profile. Please try again later.", e);
         }
     }
 
@@ -74,13 +79,13 @@ public class UserServiceImpl implements UserService {
             // Step 3: Map to DTOs
             List<BookingResponse> responses = bookings.stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
             logger.info("Fetched {} bookings for user: {}", responses.size(), currentUser.getEmail());
             return responses;
         } catch (Exception e) {
             logger.error("Error fetching bookings for current user: {}", e.getMessage());
-            throw new RuntimeException("Unable to fetch your bookings. Please try again later.");
+            throw new UserServiceException("Unable to fetch your bookings. Please try again later.", e);
         }
     }
 
@@ -91,15 +96,18 @@ public class UserServiceImpl implements UserService {
             User user = userRepository.findById(UUID.fromString(id))
                     .orElseThrow(() -> {
                         logger.error("User not found with ID: {}", id);
-                        return new RuntimeException("User not found with the provided ID.");
+                        return new UserServiceException("User not found with the provided ID.");
                     });
             logger.info("User fetched successfully: {}", user.getEmail());
             return UserResponse.from(user);
+        } catch (UserServiceException e) {  // 👈 Catch specific exception
+            throw e; // Re-throw directly without wrapping
         } catch (Exception e) {
             logger.error("Error fetching user by ID: {}", e.getMessage());
-            throw new RuntimeException("Unable to fetch user details. Please check the user ID and try again.");
+            throw new UserServiceException("Unable to fetch user details. Please check the user ID and try again.", e);
         }
     }
+
 
     @Override
     public List<UserResponse> getAllUsers(int page, int size) {
@@ -107,13 +115,13 @@ public class UserServiceImpl implements UserService {
             logger.info("Fetching all users with pagination - page: {}, size: {}", page, size);
             List<UserResponse> users = userRepository.findAll()
                     .stream()
-                    .map(UserResponse::from)
-                    .collect(Collectors.toList());
+                    .map(UserResponse::from) // includes emailVerified
+                    .toList();
             logger.info("Total users fetched: {}", users.size());
             return users;
         } catch (Exception e) {
             logger.error("Error fetching all users: {}", e.getMessage());
-            throw new RuntimeException("Unable to fetch users. Please try again later.");
+            throw new UserServiceException("Unable to fetch users. Please try again later.", e);
         }
     }
 
@@ -124,16 +132,19 @@ public class UserServiceImpl implements UserService {
             User user = userRepository.findById(UUID.fromString(id))
                     .orElseThrow(() -> {
                         logger.error("User not found with ID: {}", id);
-                        return new RuntimeException("User not found with the provided ID.");
+                        return new UserServiceException("User not found with the provided ID.");
                     });
             user.setRole(request.getRole());
             userRepository.save(user);
             logger.info("User role updated successfully for ID: {}", id);
+        } catch (UserServiceException e) {  // 👈 Catch specific exception
+            throw e; // Re-throw directly
         } catch (Exception e) {
             logger.error("Error updating user role: {}", e.getMessage());
-            throw new RuntimeException("Unable to update user role. Please try again later.");
+            throw new UserServiceException("Unable to update user role. Please try again later.", e);
         }
     }
+
 
     @Override
     public void deleteUser(String id) {
@@ -143,7 +154,7 @@ public class UserServiceImpl implements UserService {
             logger.info("User deleted successfully with ID: {}", id);
         } catch (Exception e) {
             logger.error("Error deleting user: {}", e.getMessage());
-            throw new RuntimeException("Unable to delete user. Please try again later.");
+            throw new UserServiceException("Unable to delete user. Please try again later.", e);
         }
     }
 
